# cuCTRU_Light

./: .gitignore  CMakeLists.txt  README.en.md  README.md  run.sh  test_ctru_gpu  test_ntt_gpu
common/: CMakeLists.txt  aes256ctr.c  sha256.c  sha512.c
src/: CMakeLists.txt  CTRU-Light.txt  LICENSE  Makefile  TestReduce.c  TestReduce.cu  api.h  cbd.c  cbd.h  coding.c  ctru.c  ctru.h  inverse.c  inverse.h  kem.c  ntt.c  ntt.h  pack.c  pack.h  params.h  pke.c  pke.h  poly.c  poly.h  print_ctru.c  print_kem.c  randombytes.c  reduce.c  reduce.h  reduce_c  reduce_cuda  symmetric_crypto.h  test_ctru.c  test_kem.c  test_kemlight  test_ntt  test_ntt.c  test_pack.c  test_pack_cpu  test_pke.c  (+5 more)
src-CTRU/: Makefile  cbd.cu  cbd.cuh  coding.cu  coding.cuh  ctru.cu  ctru.cuh  fips202.cu  fips202.cuh  inv.cu  inv.cuh  ntt.cu  ntt.cuh  pack.cu  pack.cuh  poly.cu  poly.cuh  randombytes.cu  reduce.cu  reduce.cuh  test_ctru.cu  test_mul.cu  test_ntt  test_ntt.cu  test_pack.cu  test_pack_gpu  test_vector.cuh
test/: CMakeLists.txt  test_kem.c
